Remove old tailwind classes, update tags

--- a/_posts/getting-started-copy.mdx
+++ b/_posts/getting-started-copy.mdx
@@ -4,12 +4,12 @@ thumbnail: /assets/placeholder.svg
 title: Getting started in Next.js with TypeScript 2
 description: A quick guide into Next.js and Typescript with deployment to vercel
 prerequisites: ['Node.js installed on your computer', 'Basic knowledge working with Next.js and TypeScript']
-stacks: ['Next.js','TypeScript','Git']
+tags: ['Next.js','TypeScript','Git']
 ---
 
 <Prerequisites />
 
-<Stacks />
+<Tags />
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies lorem ut tincidunt ultricies. Donec fringilla dui et sapien auctor, a feugiat urna vestibulum. Nam vulputate risus vehicula massa mollis dapibus. Quisque id facilisis arcu. Donec convallis at leo eu tincidunt. Pellentesque erat magna, facilisis vitae ipsum ac, pellentesque porta eros. Aenean pulvinar interdum justo quis lacinia. Vestibulum sodales elit vel ante dignissim sagittis.
 
