--- a/_posts/getting-starta.mdx
+++ b/_posts/getting-starta.mdx
@@ -11,6 +11,6 @@ stacks: ['Next.js','TypeScript','Git']
 
 <Stacks />
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies lorem ut tincidunt ultricies. Donec fringilla dui et sapien auctor, a feugiat urna vestibulum. Nam vulputate risus vehicula massa mollis dapibus. Quisque id facilisis arcu. Donec convallis at leo eu tincidunt. Pellentesque erat magna, facilisis vitae ipsum ac, pellentesque porta eros. Aenean pulvinar interdum justo quis lacinia. Vestibulum sodales elit vel ante dignissim sagittis.
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
 
-Ut pretium posuere dictum. Cras vel vestibulum nibh, non pellentesque massa. In congue dui sit amet justo blandit tempor. Proin nec consequat augue. Vivamus eu erat quis ligula ornare efficitur. Duis ultrices luctus massa, eget venenatis urna ultrices sit amet. Donec sollicitudin quis nisi quis laoreet. Quisque ac sem porta, volutpat mi eget, aliquam metus. Nulla egestas, elit vel aliquam dignissim, risus arcu venenatis ipsum, aliquam vulputate enim augue sit amet magna. Aliquam sit amet ligula lobortis, consectetur nisi nec, tincidunt augue. Ut mollis quam vitae tincidunt tincidunt. Curabitur sit amet ipsum eleifend, sodales turpis et, aliquam augue. Maecenas tristique ipsum sit amet nunc consectetur laoreet. Duis lacus turpis, imperdiet finibus faucibus ut, venenatis eget ex
+Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.
