--- a/_pages/about.mdx
+++ b/_pages/about.mdx
@@ -1,15 +1,10 @@
 ---
 date: '2022-01-25'
 thumbnail: /assets/placeholder.svg
-title: Getting started in Next.js with TypeScript 3
+title: Hello world
 description: A quick guide into Next.js and Typescript with deployment to vercel
-prerequisites: ['Node.js installed on your computer', 'Basic knowledge working with Next.js and TypeScript']
-tags: ['Next.js','TypeScript','Git']
 ---
 
-<Prerequisites />
-
-<Tags />
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
 
