Add basic search functionality + update readme

--- a/_posts/getting-starta.mdx
+++ b/_posts/getting-starta.mdx
@@ -1,7 +1,7 @@
 ---
 date: '2022-01-25'
 thumbnail: /assets/placeholder.svg
-title: Getting started in Next.js with TypeScript 3
+title: Typescript Test Post
 description: A quick guide into Next.js and Typescript with deployment to vercel
 prerequisites: ['Node.js installed on your computer', 'Basic knowledge working with Next.js and TypeScript']
 tags: ['Next.js','TypeScript','Git']
