--- a/_posts/getting-started copy 10.mdx
+++ b/_posts/getting-started copy 10.mdx
@@ -1,7 +1,8 @@
 ---
-date: '2021-12-25'
-thumbnail: /assets/placeholder.svg
-title: Getting started in Next.js with TypeScript 2
+date: '2021-11-25'
+thumbnail: /assets/600x400.svg
+coverImage: /assets/1920x1080.svg
+title: Getting started in Next.js with TypeScript
 description: A quick guide into Next.js and Typescript with deployment to vercel
 prerequisites: ['Node.js installed on your computer', 'Basic knowledge working with Next.js and TypeScript']
 tags: ['Next.js','TypeScript','Git']
@@ -16,7 +17,3 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies lorem u
 Ut pretium posuere dictum. Cras vel vestibulum nibh, non pellentesque massa. In congue dui sit amet justo blandit tempor. Proin nec consequat augue. Vivamus eu erat quis ligula ornare efficitur. Duis ultrices luctus massa, eget venenatis urna ultrices sit amet. Donec sollicitudin quis nisi quis laoreet. Quisque ac sem porta, volutpat mi eget, aliquam metus. Nulla egestas, elit vel aliquam dignissim, risus arcu venenatis ipsum, aliquam vulputate enim augue sit amet magna. Aliquam sit amet ligula lobortis, consectetur nisi nec, tincidunt augue. Ut mollis quam vitae tincidunt tincidunt. Curabitur sit amet ipsum eleifend, sodales turpis et, aliquam augue. Maecenas tristique ipsum sit amet nunc consectetur laoreet. Duis lacus turpis, imperdiet finibus faucibus ut, venenatis eget ex
 
 <GistEmbed id="0bbdbd731e021604b780314d81584c0d" />
-
-```
-<span>test</span>
-```
