--- a/_pages/about.mdx
+++ b/_pages/about.mdx
@@ -1,10 +1,10 @@
 ---
 date: '2022-01-25'
-thumbnail: /assets/placeholder.svg
-title: Hello world
+thumbnail: /assets/600x400.svg
+coverImage: /assets/1920x1080.svg
+title: About me
 description: A quick guide into Next.js and Typescript with deployment to vercel
 ---
-
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
 
