Basic post layout

--- a/_posts/sample-post-7.mdx
+++ b/_posts/sample-post-7.mdx
@@ -2,7 +2,7 @@
 date: '2021-11-25'
 thumbnail: /assets/600x400.svg
 coverImage: /assets/1920x1080.svg
-title: Getting started in Next.js with TypeScript
+title: Praesent placerat risus quis eros
 description: A quick guide into Next.js and Typescript with deployment to vercel
 prerequisites: ['Node.js installed on your computer', 'Basic knowledge working with Next.js and TypeScript']
 tags: ['Next.js','TypeScript','Git']
