--- a/_posts/getting-started.mdx
+++ b/_posts/getting-started.mdx
@@ -5,7 +5,7 @@ coverImage: /assets/1920x1080.svg
 title: Getting started in Next.js with TypeScript
 description: A quick guide into Next.js and Typescript with deployment to vercel
 prerequisites: ['Node.js installed on your computer', 'Basic knowledge working with Next.js and TypeScript']
-tags: ['Next.js','TypeScript','Git']
+tags: ['Next.js','TypeScript','Git', 'Test tag']
 ---
 
 <Prerequisites />
