--- a/_posts/getting-started.mdx
+++ b/_posts/getting-started.mdx
@@ -4,11 +4,8 @@ thumbnail: /assets/600x400.svg
 coverImage: /assets/1920x1080.svg
 title: Getting started in Next.js with TypeScript
 description: A quick guide into Next.js and Typescript with deployment to vercel
-prerequisites: ['Node.js installed on your computer', 'Basic knowledge working with Next.js and TypeScript']
-tags: ['Next.js','TypeScript','Git', 'Test tag']
+tags: ['Git', 'Test tag']
 ---
-
-<Prerequisites />
 
 <Tags />
 
