--- a/_posts/getting-started.mdx
+++ b/_posts/getting-started.mdx
@@ -2,12 +2,10 @@
 date: '2021-11-25'
 thumbnail: /assets/600x400.svg
 coverImage: /assets/1920x1080.svg
-title: Getting started in Next.js with TypeScript
-description: A quick guide into Next.js and Typescript with deployment to vercel
-tags: ['Git', 'Test tag']
+title: Blog post demo with Gist Embed
+description: Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis
+tags: ['Git', 'Gist', 'Lorem Ipsum']
 ---
-
-<Tags />
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
 
@@ -18,8 +16,6 @@ Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metu
 ## Aliquam tincidunt mauris eu risus.
 
 Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus. Nunc tellus ante, mattis eget, gravida vitae, ultricies ac, leo. Integer leo pede, ornare a, lacinia eu, vulputate vel, nisl.
-
-<GistEmbed id="0bbdbd731e021604b780314d81584c0d" />
 
 Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscing risus a sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu. Ut scelerisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante. Vivamus imperdiet nibh feugiat est.
 
