Update general styling, fix issue where tags don't render on search results

--- a/_posts/sample-post-2.mdx
+++ b/_posts/sample-post-2.mdx
@@ -4,7 +4,7 @@ thumbnail: /assets/600x400.svg
 coverImage: /assets/1920x1080.svg
 title: Ut aliquam sollicitudin leo
 description: Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis
-tags: ['Sample', 'Sit amet']
+tags: ['Sample', 'Sit amet', 'Cras ut']
 ---
 
 # Cras ornare tristique elit
