--- a/_posts/sample-post-8.mdx
+++ b/_posts/sample-post-8.mdx
@@ -4,7 +4,7 @@ thumbnail: /assets/600x400.svg
 coverImage: /assets/1920x1080.svg
 title: Donec quis dui at dolor tempor interdum
 description: Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis
-tags: ['Sample', 'Ipsum dolor']
+tags: ['Sample', 'Ipsum dolor', 'NextJS', 'Git']
 ---
 
 # Cras ornare tristique elit
