--- a/_posts/sample-post-7.mdx
+++ b/_posts/sample-post-7.mdx
@@ -4,7 +4,7 @@ thumbnail: /assets/600x400.svg
 coverImage: /assets/1920x1080.svg
 title: Fusce pellentesque suscipit nibh
 description: Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis
-tags: ['Sample', 'Ipsum dolor']
+tags: ['Sample', 'Ipsum dolor', 'NextJS']
 ---
 
 # Cras ornare tristique elit
