--- a/_posts/getting-started.mdx
+++ b/_posts/getting-started.mdx
@@ -5,6 +5,7 @@ coverImage: /assets/1920x1080.svg
 title: Blog post demo with Gist Embed
 description: Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis
 tags: ['Git', 'Gist', 'Lorem Ipsum']
+author: SquashFold
 ---
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
